[package]
name = "scan"
version = "0.1.0"
edition = "2021"

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]
members = ["scan_core", "scan_fmt_xml", "scan_fmt_jani"]

[workspace.dependencies]
anyhow = "1.0.95"
log = "0.4.25"
ordered-float = "4.6.0"
rand = { version = "0.9.0", features = ["small_rng"] }
thiserror = "2.0.11"

[dependencies]
anyhow = { workspace = true }
scan_fmt_xml = { version = "0.1.0", path = "scan_fmt_xml" }
scan_fmt_jani = { version = "0.1.0", path = "scan_fmt_jani" }
clap = { version = "4.5.28", features = ["derive"] }
env_logger = "0.11.6"
log = { workspace = true }
indicatif = { version = "0.17.11", features = ["improved_unicode"] }
csv = "1.3.1"
flate2 = "1.0.35"
