[package]
name = "scan"
version = "0.1.0"
edition = "2024"

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"

[workspace]
members = ["scan_core", "scan_scxml", "scan_jani","scxml_lib"] 

[workspace.dependencies]
anyhow = "1.0.98"
log = "0.4.27"
rand = { version = "0.9.1", features = ["small_rng"] }
thiserror = "2.0.12"
csv = "1.3.1"
flate2 = "1.1.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"

[dependencies]
anyhow = { workspace = true }
scan_scxml = { version = "0.1.0", path = "scan_scxml" }
scan_jani = { version = "0.1.0", path = "scan_jani" }
scan_core = { version = "0.1.0", path = "scan_core" }
clap = { version = "4.5.37", features = ["derive"] }
env_logger = "0.11.8"
log = { workspace = true }
indicatif = { version = "0.17.11", features = ["improved_unicode"] }
serde = { workspace = true }
serde_json = { workspace = true }
