[package]
name = "scan_core"
version = "0.1.0"
edition = "2021"

[lib]
name = "scan_core"     # The name of the target.
crate-type = ["lib"]   # The crate types to generate.

[dependencies]
thiserror = "1.0.56"
log = { workspace = true }
rand = "0.8.*"
rayon = "1.10.0"

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "program_graph"
harness = false
