[package]
name = "scan_core"
version = "0.1.0"
edition = "2021"

[lib]
name = "scan_core"     # The name of the target.
crate-type = ["lib"]   # The crate types to generate.

[dependencies]
thiserror = "2.0.0"
log = { workspace = true }
rand = { version = "0.9.*", features = ["small_rng"] }
rayon = "1.10.0"
ordered-float = "4.2.2"
smallvec = "1.13.2"

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "program_graph"
harness = false
