[package]
name = "scan_core"
version = "0.1.0"
edition = "2024"

[lib]
name = "scan_core"     # The name of the target.
crate-type = ["lib"]   # The crate types to generate.

[dependencies]
thiserror = { workspace = true }
log = { workspace = true }
rand = { workspace = true }
rayon = "1.10.0"
ordered-float = { workspace = true }
smallvec = "1.15.0"

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "program_graph"
harness = false
