[package]
name = "scan_fmt_jani"
version = "0.1.0"
edition = "2021"

[build-dependencies]
cfgrammar = "0.13"
lrlex = "0.13"
lrpar = "0.13"

[dependencies]
cfgrammar = "0.13"
lrlex = "0.13"
lrpar = "0.13"
scan_core = { path="../scan_core" }
rand = { workspace = true }
thiserror = { workspace = true }
ordered-float = { workspace = true }
