[package]
name = "scan_fmt_xml"
version = "0.1.0"
edition = "2021"

[dependencies]
scan_core = { path="../scan_core" }
anyhow = "1.0.79"
boa_ast = "0.18.0"
boa_interner = "0.18.0"
boa_parser = "0.18.0"
env_logger = { workspace = true }
log = { workspace = true }
quick-xml = "0.35.0"
thiserror = "1.0.56"
