[package]
name = "scan_jani"
version = "0.1.0"
edition = "2024"

[lib]
name = "scan_jani"  # The name of the target.
crate-type = ["lib"]   # The crate types to generate.

[dependencies]
anyhow = { workspace = true }
log = { workspace = true }
scan_core = { path="../scan_core" }
rand = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
either = "1.15.0"
csv = { workspace = true }
flate2 = { workspace = true }
