[package]
name = "scan_scxml"
version = "0.1.0"
edition = "2024"

[lib]
name = "scan_fmt_xml"  # The name of the target.
crate-type = ["lib"]   # The crate types to generate.

[dependencies]
scan_core = { version = "0.1.0", path="../scan_core" }
anyhow = { workspace = true }
boa_ast = "0.20.0"
boa_interner = "0.20.0"
boa_parser = "0.20.0"
log = { workspace = true }
rand = { workspace = true }
quick-xml = "0.37.4"
thiserror = { workspace = true }
logos = "0.15.0"
chumsky = "0.10.1"
csv = "1.3.1"
flate2 = "1.1.1"
