[package]
name = "scxml_lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
doc = false
name = "scxml_lib"

[build-dependencies]
cfgrammar = "0.13"
lrlex = "0.13"
lrpar = "0.13"

[dependencies]
cfgrammar = "0.13"
lrlex = "0.13"
lrpar = "0.13"
anyhow = "1.0.79"
log = { workspace = true }
logos = "0.15.0"
boa_ast = "0.20.0"
boa_interner = "0.20.0"
boa_parser = "0.20.0"
lazy_static = "1.5.0"